--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 html, body{
     height: 100%;
+    font-family: 'Roboto', sans-serif;
 }
 
 .logo, .hero-secondary-txt, .header >.link, .hero-btn, .footer, .signup-info, .btn{
